# thin-layout-optimizer

./: .clang-format  .clang-tidy  .dir-locals.el  .gitignore  CMakeLists.txt  README.md
cmake/: compile-options.cmake  external-libs.cmake  static-analysis-0.cmake  static-analysis-1.cmake  warn-everything-clang.cmake  warn-everything-default.cmake  warn-everything-gcc.cmake  warn-everything.cmake
patches/ld/: base-commit.txt  v1-0001-ld-Add-support-for-section-ordering-map.patch  v1-0001-ld-Add-support-for-text-section-ordering-file-to-.patch  v1-0001-ld-gold-Add-support-for-perf-hfsort-ordering.patch  v1-0002-gold-strip-whitespace-and-comments-that-start-wit.patch  v1-0002-ld-Support-section-ordering-file-and-section-orde.patch  v1-0003-ld-Add-API-for-getting-target-arch.patch  v1-0004-gold-Add-API-for-getting-target-arch.patch  v1-0005-ld-Add-commandline-support-for-text-section-order.patch  v1-0006-gold-Add-commandline-support-for-section-ordering.patch  v1-0007-ld-Implement-support-for-text-section-ordering-ma.patch  v1-0008-gold-Implement-support-for-section-ordering-map.patch  v1-0009-ld-gold-Add-support-for-alignment-directives-in-o.patch  v1-0010-ld-gold-Add-support-for-passing-ordering-file-map.patch.env
scripts/: compare-dir.py  compare-order-glb.py  compare-order.py  concat-orders.py  finalize-order.py  get-dso-infos.py  order_file.py  package.py  phf_common.py  profile.py  tlo_common.py  unpackage.py  update-save-state.py
src/: CMakeLists.txt
src/cfg/: CMakeLists.txt  cfg-order.cc  cfg.cc  cfg.h
src/main/: CMakeLists.txt  main.cc
src/perf/: CMakeLists.txt  perf-file.cc  perf-file.h  perf-mappings.h  perf-parse-state.h  perf-parse.cc  perf-parse.h  perf-sample.h  perf-saver.cc  perf-saver.h  perf-stats-clumper.h  perf-stats-filter.h  perf-stats-types.h  perf-stats.h
src/sym/: CMakeLists.txt  addr-range.h  dso.cc  dso.h  elffile.h  func.cc  func.h  syms.h
src/system/: CMakeLists.txt  br-insn.cc  br-insn.h  insn.h
src/util/: CMakeLists.txt  algo.h  ascii-reader.h  bitfield.h  bits.h  compiler.h  compressed-reader-impl.h  compressed-reader.cc  compressed-reader.h  debug.h  empty-reader.h  file-ops.h  file-reader.h  global-stats.cc  global-stats.h  iterator.h  json-raw.h  json.h  macro.h  memory.h  packed-ptr.h  path.h  process-reader.h  random.h  reader.h  smap.h  std-reader-base.h  str-ops.h  strbuf.h  strtab.h  type-info.h  umap-raw.h  umap.h  vec.h  verbosity.cc  verbosity.h  xxhash-raw.h  xxhash.h
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt
tests/src/perf/: .gitignore  CMakeLists.txt  make-test-inputs.py  perf-file-and-save-state-helper.h  test-perf-file.cc  test-perf-parse.cc  test-perf-state-saver.cc
tests/src/sym/: CMakeLists.txt  test-addr-range.cc  test-elffile.cc
tests/src/sym/test-inputs/: test-elffile-bad-inputs  test-elffile-buggy-inputs  test-elffile-good-inputs
tests/src/system/: CMakeLists.txt  test-br-insn.cc
tests/src/util/: .gitignore  CMakeLists.txt  compressed-files-test-helper.h  gen-compression-test-files.c  gen-compression-tests.py  test-bits.cc  test-file-reader.cc  test-reader.cc  test-str-ops.cc  test-strtab.cc
tests/test-helpers/: test-help.h
wiki/: dso-flow.dot  text.md  tlo-diagram.dot
